# configs

./: .alacritty.yml  .bashrc  .git-authors  .gitconfig  .tigrc  .tmux.conf  .vimrc  Brewfile  README.md  TODO.md  alacritty.yml  gonitor.config.json  init.vim  install-bashit.sh  k9s-config.yml  notes.desktop  pet-snippets.toml  starship.toml  tig-config  trim-git-branch.bash
alacritty/: alacritty-mb-i7.yml  alacritty-mb-m1.yml  alacritty-mpb-m1.yml  alacritty-rapsberry-pi.yml  common.yml
bash-it/: aliases.bash
bash-it/custom/: add_user_initials_to_git_prompt_info.bash  bash-history.bash  cf_env.bash  disable_clock.bash  disable_ruby_prompt.bash  enable-z.bash  git_duet_rotate_authors.bash  nvm.bash
bash-snippets/: clone-assignment.sh  colors.sh  count-direct-subdirectories.sh  get_exif.sh  get_exif_macos.sh  heic-to-jpg.sh  load-all.sh  post-commit-add-signed-off-by  remove-package-from-java-files.sh  rename-all-dirs.sh  rename-batch-mode.sh
bash-snippets/podcasts/qui-a-invente/: get.py  out.html  out.json  podcast.json  pyproject.toml  rss-2024-09-20.xml
bitbar/: ping.1s.sh
dnsmasq/: daniel.conf  docker.conf  minikube.conf  pcfdev.conf
docker/: daemon.json
ghostty/: config
git-hooks/sso4k8s/: prepare-commit-msg
k8s/overlays/: install-metrics-server.sh  metrics-server-insecure.yml
kitty/: kitty-ubuntu.conf  kitty.conf  ssh.conf
mines/: clone-assignment.sh
oh-my-zsh/custom/: .p10k.zsh  (+6 more)
sso4k8s/: get-story-id  reset-story-id  set-story-id
systemd/: cf-dev.service
tmuxinator/: default.yml  tile.yml
vscode/: settings.json
zsh/: nvm.zsh
(+22 files in other folders)
